<?xml version="1.0"?>
<package format="2">
  <name>farol_gazebo_bringup</name>
  <version>1.0.0</version>
  <description>Package used to launch the 3D simulation of the vehicles and the corresponding 3D world </description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
