<?xml version="1.0"?>
<package format="3">
  <name>farol_worlds</name>
  <version>1.0.0</version>
  <description>The farol_worlds package</description>

  <!-- DSOR authors -->
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>

  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
  <author email="david.souto@tecnico.ulisboa.pt">David Souto</author>
  <author email="andre.potes@tecnico.ulisboa.pt">Andre Potes</author>

  <!-- Original UUV simulator authors-->
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
