<?xml version="1.0"?>
<package format="2">
  <name>amuned_vehicle</name>
  <version>1.0.0</version>
  <description>The 3D farol vehicle description</description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rosunit</test_depend>

</package>

