<?xml version="1.0"?>
<package format="2">
  <name>bluerov_regular</name>
  <version>1.0.0</version>
  <description>
    The 3D regular bluerov vehicle description (6 thrusters configuration). The original
    3D model was obtained at https://github.com/FletcherFT/bluerov2/tree/master/bluerov2_description
    which is under the Apache-2.0 License. If you wan to use this model in your work,
    please refer to the original source.
  </description>

  <author email="ingeniarius@todo.todo">Frederico Costa Vaz</author>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rosunit</test_depend>

</package>

