<?xml version="1.0"?>
<package format="3">
  <name>uuv_assistants</name>
  <version>1.0.0</version>
  <description>Tools and utilities to monitor and analyze the simulation</description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  
</package>
