<?xml version="1.0"?>
<package format="3">
  <name>uuv_sensor_ros_plugins</name>
  <version>0.6.13</version>
  <description>The uuv_sensor_ros_plugins package</description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>dsor_msgs</depend>
  <depend>dsor_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_sensor_ros_plugins_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>image_transport</depend>
  <depend>laser_geometry</depend>
  <depend>dmac</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
</package>
